# MechOS

./: ARCHITECTURE.md  Cargo.toml  MECHOS_OVERVIEW.md  PRINCIPAL_REVIEW.md  PRODUCTION_PLAN.md  PRODUCTION_READINESS.md  PRODUCTION_READINESS_REPORT.md  README.md  REVIEW.md  STATUS.md  UI_CLI_IMPROVEMENTS.md  USAGE.md  USER_GUIDE.md  a.md  brain_kernel_architecture.md  mechos_overview.md  mechos_usage.md  production_readiness_report.md  questions_answers.md  report.md  solutions_prd.md
crates/mechos-cli/: Cargo.toml
crates/mechos-cli/src/: config.rs  main.rs  ollama.rs  repl.rs
crates/mechos-cockpit/: Cargo.toml
crates/mechos-cockpit/src/: cockpit.html  lib.rs  server.rs
crates/mechos-hal/: Cargo.toml
crates/mechos-hal/src/: actuator.rs  camera.rs  lib.rs  pid.rs  registry.rs  relay.rs  sim.rs  sim_registry.rs
crates/mechos-kernel/: Cargo.toml
crates/mechos-kernel/src/: capability_manager.rs  kernel_gate.rs  lib.rs  state_verifier.rs  watchdog.rs
crates/mechos-memory/: Cargo.toml
crates/mechos-memory/src/: episodic.rs  lib.rs  semantic.rs  task_board.rs
crates/mechos-middleware/: Cargo.toml
crates/mechos-middleware/src/: adapter.rs  bus.rs  dashboard_sim_adapter.rs  lib.rs  ros2_adapter.rs  ros2_bridge.rs
crates/mechos-perception/: Cargo.toml
crates/mechos-perception/src/: fusion.rs  lib.rs  octree.rs  transform.rs
crates/mechos-runtime/: Cargo.toml
crates/mechos-runtime/src/: agent_loop.rs  behavior_tree.rs  lib.rs  llm_driver.rs  loop_guard.rs  telemetry.rs
crates/mechos-types/: Cargo.toml
crates/mechos-types/src/: lib.rs
