[workspace]
resolver = "2"
members = [
    "crates/mechos-types",
    "crates/mechos-middleware",
    "crates/mechos-hal",
    "crates/mechos-perception",
    "crates/mechos-kernel",
    "crates/mechos-runtime",
    "crates/mechos-memory",
    "crates/mechos-cli",
    "crates/mechos-cockpit"
]

[workspace.dependencies]
tracing = "0.1"
tracing-opentelemetry = "0.32"
