[workspace]
resolver = "2"
members = [
    "crates/mechos-types",
    "crates/mechos-middleware",
    "crates/mechos-hal",
    "crates/mechos-perception",
    "crates/mechos-kernel",
    "crates/mechos-runtime",
    "crates/mechos-memory",
    "crates/mechos-cli",
    "crates/mechos-cockpit"
]

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["trace"] }
opentelemetry-otlp = { version = "0.31", features = ["http-proto"] }
