[package]
name = "mechos-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mechos"
path = "src/main.rs"

[dependencies]
mechos-types     = { path = "../mechos-types" }
mechos-middleware = { path = "../mechos-middleware" }
mechos-kernel    = { path = "../mechos-kernel" }
mechos-memory    = { path = "../mechos-memory" }
mechos-runtime   = { path = "../mechos-runtime" }

tokio   = { version = "1", features = ["full"] }
serde   = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml    = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json"] }
zeroize = { version = "1.8", features = ["derive"] }
colored = "2.2"
ctrlc   = { version = "3.4", features = ["termination"] }
uuid    = { version = "1", features = ["v4"] }
chrono  = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
