[package]
name = "mechos-cockpit"
version = "0.1.0"
edition = "2024"

[dependencies]
mechos-types = { path = "../mechos-types" }
mechos-middleware = { path = "../mechos-middleware" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tracing = "0.1"
