[package]
name = "mechos-memory"
version = "0.1.0"
edition = "2024"

[dependencies]
mechos-types = { path = "../mechos-types" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
