[package]
name = "mechos-middleware"
version = "0.1.0"
edition = "2024"

[dependencies]
mechos-types = { path = "../mechos-types" }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
tokio-tungstenite = "0.26"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
async-trait = "0.1"
