[package]
name = "mechos-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
mechos-kernel = { path = "../mechos-kernel" }
mechos-types = { path = "../mechos-types" }
mechos-perception = { path = "../mechos-perception" }
mechos-memory = { path = "../mechos-memory" }
mechos-middleware = { path = "../mechos-middleware" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["derive"] }
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-opentelemetry = "0.32"
governor = "0.10.4"
